[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voltyield-ledger-core"
version = "0.1.0"
description = "Deterministic, audit-ready compliance infrastructure for EV yield."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
voltyield-ledger = "voltyield_ledger_core.cli:main"
platinum = "voltyield_platinum.cli:main"
